--- a/GameEngine/StatePatternDemo/StatePatternDemo.csproj
+++ b/GameEngine/StatePatternDemo/StatePatternDemo.csproj
@@ -42,12 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SchoolState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SleepState.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="StudentSchoolState.cs" />
+    <Compile Include="StudentSleepState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
