[add] DataSource with games list

--- a/GameEngine/GameEngine/GameEngine.csproj
+++ b/GameEngine/GameEngine/GameEngine.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataSource.cs" />
+    <Compile Include="FilterCriteria.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
